<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.register.RegisterFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_register"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.faris.storyapp.ui.customview.CustomEditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        app:flagType="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_register" />

    <com.faris.storyapp.ui.customview.CustomEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        app:flagType="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <com.faris.storyapp.ui.customview.CustomEditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        app:flagType="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <com.faris.storyapp.ui.customview.CustomButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="20dp"
        android:alpha="0"
        android:enabled="false"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:text="@string/have_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_answer"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:alpha="0"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_question"
        app:layout_constraintTop_toTopOf="@id/tv_question" />


</androidx.constraintlayout.widget.ConstraintLayout>